Completed first 2 video quiz questions

--- a/index.html
+++ b/index.html
@@ -56,6 +56,31 @@
                     </p>
                 </p>
             </fieldset>
+
+            <fieldset style="background-color: lightyellow;">
+                <legend>Questions</legend>
+                <ol>
+                    <li>What did the dinosaur guy say after the other guy was singing?</li>
+                    <p>
+                        <input type="radio" name="q-1" id="yee" value="yee" />
+                        <label for="yee">yee</label>
+                    </p>
+                    <p>
+                        <input type="radio" name="q-1" id="nah" value="nah" />
+                        <label for="nah">nah</label>
+                    </p>
+                    <p>
+                        <input type="radio" name="q-1" id="idk" value="idk" />
+                        <label for="idk">I'm actually hearing impaired, so I have no idea what noises were coming from those poorly animated dogs</label>
+                    </p>
+
+                    <li>Which one of them has been divorced 3 times?</li>
+                    <p>
+                        <input type="radio" name="q-2" id="singer" value="singer" />
+                        <label for="singer">Singing guy (this is the answer and you know for sure because you can just tell he's a total Melvin)</label>
+                    </p>
+                </ol>              
+            </fieldset>
         </form>
     </div>
 </body>
