Added 3rd question, 'submit' button, and made final changes

--- a/index.html
+++ b/index.html
@@ -79,8 +79,20 @@
                         <input type="radio" name="q-2" id="singer" value="singer" />
                         <label for="singer">Singing guy (this is the answer and you know for sure because you can just tell he's a total Melvin)</label>
                     </p>
+
+                    <li>Why does the singing Melvin look sad after the other guy said cool stuff?</li>
+                    <p>
+                        Tell me why he did it. Seriously, I don't know why. TELL ME 
+                        <br /><br />
+                        <textarea name="why-he-do-it" attributes: rows="3";></textarea>
+                    </p>
                 </ol>              
             </fieldset>
+
+            <p>
+                <button type="submit">Submit this Bad Boy</button>
+            </p>
+
         </form>
     </div>
 </body>
